# promptql-cs-benchmark

./: .gitignore  README.md  ai_assistant.py  bench.py  claude35_bench.py  claude35_eval.py  claude35_oracle_eval.py  compare_results.py  complexity_5_ground_truths.csv  create_compare_results_html.py  evaluation.py  generator.py  gpt4_bench.py  gpt4_eval.py  o1_bench.py  o1_eval.py  o1_oracle_eval.py  o1_with_python_bench.py  o1_with_python_eval.py  plan_change_generator.py  promptql_eval.py  pyproject.toml  pyrightconfig.json  render_promptql_api_output.py  requirements.txt  sample_support_conversations.txt  support_ticket_generator.py  support_ticket_generator_increment.py  support_tickets.json  support_tickets_dump.sql  support_tickets_dump_jan13.sql  test_scorer.py  user_generator.py
comparison_output/: claude_comparison.html  index.html  o1_comparison.html  o3-mini_comparison.html
data_dumps/: control_plane_schema.sql  support_schema.sql  support_ticket_comments.json  support_tickets.json  support_tickets_dump_feb3.sql  support_tickets_dump_jan13.sql
data_generator/: invoice_generator.py  support_agent_generator.py  usage_generator.py
evaluation_framework/: README.md  toggles.md
ground_truth_generators/: complexity_2.py  complexity_3.py  complexity_3_ground_truths.csv  complexity_4_ground_truths.csv  ground_truth_generator.py  ground_truth_generator_full.py
ground_truth_programs/: complexity_1.py  complexity_4.py  complexity_5.py
inputs/: prompt_1.yaml
my-assistant/: .env  .gitignore  compose.yaml
scoring/: kendall_tau_scorer.py  simple_json_scorer.py  (+1 more)
(+1113 files in other folders)
